--- a/styles/layout.css
+++ b/styles/layout.css
@@ -19,7 +19,7 @@
 
 
 body {
-  font-family: 'Acumin Pro', san-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 16px;
   line-height: 28px;
   opacity: 1;
@@ -42,16 +42,17 @@ a:hover {
 
 h2 {
   font-weight: 400;
-  font-family: 'Warnock Pro', serif;
+  font-family: warnock-pro-display, serif;
   font-size: 80px;
   width: 365px;
 }
 
 .header {
   width: 100%;
-  padding: 100px;
+  padding: 10px;
+  padding-left: 100px;
   display: flex;
-  font-family: 'Acumin Pro Wide', san-serif;
+  font-family: acumin-pro, sans-serif;
   justify-content: flex-start;
   align-items: center;
   font-size: 30px;
@@ -77,25 +78,26 @@ h2 {
 }
 
 .sidebar {
-  width: 250px; 
+  width: 200px; 
   font-size: 18px;
+  margin-top: 30px;
   height: 100%;
   position: fixed;
   text-align: right;
-  font-family: 'acumin pro', sans-serif;
+  font-family: acumin-pro, sans-serif;
 }
 
 .sidebar a {
   display: block;
   padding: 2px;
   margin: 10px;
-  font-family: 'Acumin Pro Wide', sans-serif;
+  font-family: acumin-pro-wide, sans-serif;
 }
 
 .entries {
-  width: 70%;
-  margin-left: 320px;
-  margin-top: -30px;
+  width: 100%;
+  margin-left: 210px;
+  margin-top: 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
